--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <package format="2">
     <name>apf_planner</name>
-    <version>1.1.0</version>
+    <version>1.1.1</version>
     <description>
-        The prometheus_local_planning package
+        The apf_planner package
     </description>
 
     <!-- One maintainer tag required, multiple allowed, one person per tag -->
