--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
     <name>apf_planner</name>
-    <version>1.1.1</version>
+    <version>1.2.0</version>
     <description>
         The apf_planner package
     </description>
@@ -25,7 +25,6 @@
     <!-- Example: -->
     <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
 
-
     <!-- The *depend tags are used to specify dependencies -->
     <!-- Dependencies can be catkin packages or system dependencies -->
     <!-- Examples: -->
@@ -48,29 +47,13 @@
     <!--   <doc_depend>doxygen</doc_depend> -->
     <buildtool_depend>catkin</buildtool_depend>
 
-    <build_depend>roscpp</build_depend>
-    <build_depend>rospy</build_depend>
-    <build_depend>std_msgs</build_depend>
-    <build_depend>sensor_msgs</build_depend>
-    <build_depend>geometry_msgs</build_depend>
-    <build_depend>nav_msgs</build_depend>
-    <build_depend>prometheus_msgs</build_depend>
-
-    <build_export_depend>roscpp</build_export_depend>
-    <build_export_depend>rospy</build_export_depend>
-    <build_export_depend>std_msgs</build_export_depend>
-    <build_export_depend>sensor_msgs</build_export_depend>
-    <build_export_depend>geometry_msgs</build_export_depend>
-    <build_export_depend>nav_msgs</build_export_depend>
-    <build_export_depend>prometheus_msgs</build_export_depend>
-
-    <exec_depend>roscpp</exec_depend>
-    <exec_depend>rospy</exec_depend>
-    <exec_depend>std_msgs</exec_depend>
-    <exec_depend>sensor_msgs</exec_depend>
-    <exec_depend>geometry_msgs</exec_depend>
-    <exec_depend>nav_msgs</exec_depend>
-    <exec_depend>prometheus_msgs</exec_depend>
+    <depend>roscpp</depend>
+    <depend>rospy</depend>
+    <depend>std_msgs</depend>
+    <depend>sensor_msgs</depend>
+    <depend>geometry_msgs</depend>
+    <depend>nav_msgs</depend>
+    <depend>prometheus_msgs</depend>
 
     <!-- The export tag contains other, unspecified, tags -->
     <export>
